@@ -1,7 +1,7 @@
 Changes since version 1.0.1
 ---------------------------
 
-- Inlined most operators in IceUtil::Time for performance rasons.
+- Inlined most operators in IceUtil::Time for performance reasons.
 
 - Added IceUtil::ThreadControl::isAlive(). This function is useful for
   implementing a non-blocking join().
@@ -29,6 +29,11 @@ Changes since version 1.0.1
 - Improved IceBox service deactivation. Instead of successively
   stoping a service and destroying its communicator, services are now
   all stopped first and then their communicators are destroyed.
+
+- Modified the Ice protocol to fix a problem with compression. The
+  message types for compressed messages have been removed, and a
+  field has been added to the message header indicating compression
+  status.
 
 - Added version negotiation to the Ice protocol. This permits future
   protocol extensions to be added without breaking interoperability
